--- a/source/assets/scss/views/product-lens-anim.scss
+++ b/source/assets/scss/views/product-lens-anim.scss
@@ -46,7 +46,7 @@
     }
     30% {
         opacity: 0;
-        transform: translate3D(-30rem,0,0);
+        transform: translate3D(-200px,0,0);
     }
     100% {
         opacity: 1;
@@ -61,7 +61,7 @@
     }
     70% {
         opacity: 0;
-        transform: translate3D(30rem,0,0);
+        transform: translate3D(200px,0,0);
     }
     100% {
         opacity: 1;
@@ -89,7 +89,7 @@
     }
     30% {
         opacity: 0;
-        transform: translate3D(0,0.5rem,0);
+        transform: translate3D(0,10px,0);
     }
     100% {
         opacity: 1;
@@ -102,7 +102,7 @@
     }
     70% {
         opacity: 0;
-        transform: translate3D(0,0.5rem,0);
+        transform: translate3D(0,10px,0);
     }
     100% {
         opacity: 1;
@@ -115,7 +115,7 @@
     }
     90% {
         opacity: 0;
-        transform: translate3D(0,0.5rem,0);
+        transform: translate3D(0,10px,0);
     }
     100% {
         opacity: 1;
