Layout of product lens stays 3-col down to medium breakpoint. It's tight but still works.

--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -61,7 +61,7 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
       .columns.small-12.medium-4.animate-me.step-6
         p You have building your compliant apps and infrastructure covered, but continuously maintaining and monitoring compliance of your complex environment may be beyond you.
 
-  .row.collapse.align-center.small-up-1.medium-large-up-3.large-up-3.row--card-grid
+  .row.collapse.align-center.small-up-1.medium-up-3.large-up-3.row--card-grid
     .column.relative.has-blob.animate-me.step-3
       .card.container-color--trans.relative.z-5
         .card-section
