--- a/source/contentful_templates/academy.html.slim
+++ b/source/contentful_templates/academy.html.slim
@@ -45,80 +45,69 @@ ruby:
   else
       current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   end
+scss:
+  #article-body h2 a, h3 a {color: #252828;}
+  #article-body h2 a {font-weight: 400;}
 
-.container-gray-12
+section.bg-gray-12
   = partial "partials/head/header", :locals => { :style => "dark" }
-  .container-gray-3
-    img.featured-image.lozad.img-cover data-srcset="#{post_featured_image}?fit=thumb&w=640&h=360&q=50 640w, #{post_featured_image}?fit=thumb&w=800&h=400&q=40 800w, #{post_featured_image}?fit=thumb&w=1800&h=400 1200w" /
-  section#blogPost.row.collapse.align-center style="opacity: 1;"
-    .columns.small-12.large-8
-      article#content.post-body.blur-0.container-color--white.pad--xl.group--2x.drop
-        header
-          .subhead--spaced.headline-6
-            = partial "/partials/snippets/pubdate", :locals => p
-          h1.headline-3.headline-bold = p.title
-          - if p["author"].has_key?("profile_pic")
-            = partial("partials/snippets/person", :locals => { :p => p["author"] })
-        = partial "/partials/snippets/share", :locals => { :p => p, :classes => "show-for-xlarge vertical" }
+section.bg-white.section-article
+  .row
+    .columns.small-12.medium-large-8
+      h4.subhead--spaced.headline-6
+        a.link--dark.faded href="/academy/" title=("Explore the Datica Academy")  Datica Academy
+      h1.headline-2= p["title"]
+      - if p.has_key?("author")
+        = partial("partials/snippets/person", :locals => { :p => p["author"] })
+      p
+        = partial "/partials/snippets/pubdate", :locals => p
+        - if p.has_key?("tags")
+          = partial "/partials/content/tags", :locals => p
+  .row
+    .columns.small-12.medium-large-8
+      article#content.group
+        #toc-top.group.article-toc.hide-for-large
         - if p.has_key?("lead")
           .lead
             = Kramdown::Document.new(p["lead"]).to_html
-        #toc-top.group.article-toc.hide-for-large
+
         #article-body.content-dynamic
           = Kramdown::Document.new(p["post"]).to_html
-        .row.row--gutter-small.align-justify.align-middle
-          - if p.has_key?("tags")
-            .columns.shrink
-              = inline_svg("small/icon-tag", class: "icon-inline svg-color--gray-5")
-              = partial "/partials/content/tags", :locals => p
-          .columns.shrink.text-right
-            = partial "/partials/snippets/share", :locals => { :p => p, :classes => "" }
-        - if p.has_key?("cta_ref")
-          = partial("/partials/content/cta", :locals => { :p => p["cta_ref"] })
-      aside#nextPrev.row.small-up-1.medium-up-2.group
-        .column
-          - previous_item = get_previous_item(data.site.blog, p, "pub_date")
-          - if previous_item != nil
-            p.blog-date Earlier
-            h4.headline-5
-              a href="/blog/#{previous_item["slug"]}/" rel="prev" title=("Read this post") = previous_item["title"]
-            - if previous_item.has_key?("summary")
-              .text-smaller
-                = Kramdown::Document.new(previous_item["summary"]).to_html
-        .column
-          - next_item = get_next_item(data.site.blog, p, "pub_date")
-          - if next_item != nil
-            p.blog-date Next Post
-            h4.headline-5
-              a href="/blog/#{next_item["slug"]}/" rel="next" title=("Read this post") = next_item["title"]
-            - if next_item.has_key?("summary")
-              .text-smaller
-                = Kramdown::Document.new(next_item["summary"]).to_html
+      = partial "/partials/snippets/share", :locals => { :p => p, :classes => "group" }
+      - if p.has_key?("cta_ref")
+        = partial("/partials/content/cta", :locals => { :p => p["cta_ref"] })
+      - if p.has_key?("related_entries")
+        h4.headline-5.text--spaced.text-center Related Academy Articles
+        aside.row.row--gutter-small.small-up-1.medium-up-2.group
+          - p["related_entries"].each do | relatedPost |
+            - # mapping content type to paths. How could this be a ruby helper or function?
+            - url_segment = case relatedPost._meta.content_type_id
+            - when "podcastEntry" then "innovation"
+            - when "pressRelease" then "press-release"
+            - else relatedPost._meta.content_type_id
+            - related_post_path = "/" + url_segment + "/" + relatedPost.slug
+            - if relatedPost.has_key?("title")
+              .column
+                a href=related_post_path title=("Read this post") = relatedPost["title"]
+                - if relatedPost.has_key?("summary")
+                  .text-smaller= Kramdown::Document.new(relatedPost["summary"]).to_html
+      .column
+        = partial "partials/snippets/button", :locals => { :label => "Datica Academy", :title => "Explore the Datica Academy", :url => "/academy/", :button_classes => "button hollow", :icon => "icon-book-fill", :icon_align => "left" }
 
-    aside.post-sidebar.columns.small-12.large-4 style="margin-top: 1rem; opacity: 1;" data-sticky-container=""
-      .sticky data-options=("topAnchor: 525; stickyOn: xlarge; marginTop: 3;") data-btm-anchor="cta" data-sticky=""
-        .pad.group
-          div id="toc-sidebar" class="group article-toc show-for-large"
-            /= partial "blog/partials/blog-subscription-simple", :locals => { :color => "gray" }
-          div
-            - if p.has_key?("discovery_topic") && p["discovery_topic"].has_key?("_meta")
-              - topic = data.site.discover[p.discovery_topic.id]
-              = partial "partials/cards/discover-lite", :locals => { :topic => topic, :classes => "group" }
-              - if topic.slug == "ehr-integrations"
-                = partial("/partials/content/cta", :locals => { :p => data.site.cta["1h6f0OBRqiiayM2cy28qey"] })
-            - if p.has_key?("related_entries") && p["related_entries"].count == 1
-              - p["related_entries"].take(1).each do | relatedPost |
-                = partial "partials/cards/featured-blog", :locals => { :post => relatedPost, :style => "light", :size => "small" }
-/ - if p.has_key?("related_entries") && p["related_entries"].count > 1
-  section.section-article--med.container-gray-10
-    h4.headline-5.text--spaced.text-center.group Related
-    .row.full-width.small-up-1.medium-up-2.large-up-3.xlarge-up-4.align-center
-      - p["related_entries"][0...4].each do | relatedPost |
-        .column.group
-          = partial "partials/cards/featured-blog", :locals => { :post => relatedPost, :style => "light", :size => "small" }
+    aside.columns.small-12.medium-large-4.section--sidebar data-sticky-container="" 
+      .sticky data-options=("anchor: content;") data-sticky="" data-sticky-on="large" 
+        - if p.has_key?("featured_image")
+          img.lozad.group data-srcset="#{post_featured_image}?fit=thumb&w=640&h=360&q=50 640w, #{post_featured_image}?fit=thumb&w=600&h=400&q=40 800w, #{post_featured_image}?w=800 1200w" /
+        #toc-sidebar.article-toc.show-for-large.group
+        - if p.has_key?("related_guide")
+          .group
+            = partial "partials/cards/card-report", :locals => { :post => p.related_guide, :style => "white", :size => "small", :desc => true, :show_button => true }
+        - else
+          - sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse!
+          - sorted_guides.take(1).each do | id, guide_entry |
+            .group
+              = partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "white", :size => "small", :desc => true, :show_button => true }
 
 = partial "partials/snippets/json-ld-article"
-script defer src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autorun=true&skin=desert"
+<script type="text/javascript" defer src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autorun=true&skin=desert"></script>
 
-/= partial "partials/content/tweet-styling"
-/.lozad.container-image--fill data-background-image="#{post_featured_image}?w=1800&h=400"
