--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -18,8 +18,9 @@ promo1 = "https://images.ctfassets.net/189dvqdsjh46/6KsyCUFBSMsOW6UW2IUW4U/b2fc8
 <section class="section-article">
     <div class="row align-center">
         <div class="columns small-12 medium-10 large-8 text-center group">
-            <%= inline_svg("icon-book-academy", class: "icon-size--xlarge") %>
-            <h1 class="headline-2">The Datica Academy</h1>
+            <h1 class="headline-2">
+                <%= inline_svg("academy-logo", class: "logo-size--medium") %>
+            </h1>
             <p>HIPAA is complicated, but easily learned. The Datica HIPAA and Interoperability Academy walks you through the intricacies of HIPAA, HL7, and FHIR—from the highest concepts to the deepest details.</p>
             <p>Start with the basics, like why Protected Health Information (PHI) is central to HIPAA, then work your way towards advanced topics like FHIR and HL7.</p>
         </div>
