--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -70,7 +70,7 @@ ruby:
 
 .container-gray-11
   .container-gray-3
-    img.featured-image.lozad.img-cover data-srcset="#{post_featured_image}?fit=thumb&w=640&h=360&q=50 640w, #{post_featured_image}?fit=thumb&w=800&h=400&q=40 800w, #{post_featured_image}?fit=thumb&w=1800&h=400 1200w" /
+    img.featured-image.lozad.img-cover data-srcset="#{post_featured_image}?fit=thumb&fm=jpg&fl=progressive&w=640&h=360&q=50 640w, #{post_featured_image}?fit=thumb&fm=jpg&fl=progressive&w=800&h=400&q=40 800w, #{post_featured_image}?fit=thumb&fm=jpg&fl=progressive&w=1800&h=400 1200w" /
   section#blogPost.row.collapse.align-center style="opacity: 1;"
     .columns.small-12.large-8
       article.post-body.blur-0.container-color--white.pad--xl.group--2x.drop
