--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -91,7 +91,7 @@ nav.nav data-theme=theme
                       - if nav_item.section_promo.has_key?("cta_image")
                         - if nav_item.section_promo.has_key?("cta_image_small") ? banner = cta_entry.cta_image_small.url : banner = cta_entry.cta_image.url
                         a href=cta_entry.cta_url title=cta_entry.cta_title data-track="true" data-track-category="nav" data-track-id="section-promo-#{nav_item.section.parameterize}"
-                          img.lozad.thumbnail alt=cta_entry.cta_title data-src="#{banner}?w=560" src="#{banner}?w=560&q=5" width="280" /
+                          img.lozad.thumbnail alt=cta_entry.cta_title data-src="#{banner}?w=560&fm=jpg&fl=progressive" src="#{banner}?w=560&q=5" width="280" /
                       - else
                         h4.headline-5.nav--promo = cta_entry.cta_title
                         p.text-small = cta_entry.cta_desc
